[bug][index]: fix horizontal overflow

--- a/app/assets/stylesheets/redesign/_index.css.scss
+++ b/app/assets/stylesheets/redesign/_index.css.scss
@@ -141,6 +141,10 @@
 		text-transform: uppercase;
 		font-size: 8rem;
 		margin-top: 45px;
+
+		@media(max-width: 480px){
+			font-size: 6rem;
+		}
 	}
 
 	.lead {
